--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             <div class="header-content">
                 <h1>Hello,</h1>
                 <div class="p-img">
-                    <img src="assets/icon1.png" class="clearfix" alt="">
                     <p> Donec scelerisque efficitur orci, semper pretium augue posuere vel. Etiam consectetur et mi ac ornare. Phasellus ullamcorper sem sed congue varius. </p>
-                    
+                    <img src="assets/icon1.png" class="clearfix" alt="">
                 </div>
                 
             </div>   
@@ -32,10 +31,10 @@
             <div class="content-img clearfix">
                 <img src="assets/img_03.jpg" alt="">
                 <img src="assets/img_05.jpg" class="last" alt="">
-                <img src="assets/icon2.png"  class='first-icon' alt="">
+                <img src="assets/icon2.png"  class="first-icon" alt="">
                 <img src="assets/img_08.jpg" alt="">
-                <img src="assets/img_09.jpg" alt="" class="last">
-                <img src="assets/icon4.png" class='pink-icon' alt="">
+                <img src="assets/img_09.jpg" alt="">
+                <img src="assets/icon4.png" class="pink-icon" alt="">
             </div>
         </div>
         <div class="color-footer">
